--- a/.github/workflows/main-build.yaml
+++ b/.github/workflows/main-build.yaml
@@ -7,24 +7,45 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/build-vscode-extension.yml
-    with:
-      # Build only for macOS latest and Ubuntu latest
-      platforms: |
-        [
-          {
-            "os": "ubuntu-latest",
-            "platform": "linux",
-            "arch": "x64",
-            "npm_config_arch": "x64"
-          },
-          {
-            "os": "macos-latest",
-            "platform": "darwin",
-            "arch": "arm64",
-            "npm_config_arch": "arm64"
-          }
-        ]
-      pre-release: false
-      commit-sha: ${{ github.sha }}
-    secrets: inherit
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            platform: linux
+            arch: x64
+            npm_config_arch: x64
+          - os: macos-latest
+            platform: darwin
+            arch: arm64
+            npm_config_arch: arm64
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+
+      - uses: ./.github/actions/build-vscode-extension
+        with:
+          platform: ${{ matrix.platform }}
+          arch: ${{ matrix.arch }}
+          npm_config_arch: ${{ matrix.npm_config_arch }}
+          pre-release: false
+          commit-sha: ${{ github.sha }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vscode-extension-build-${{ runner.os }}
+          path: extensions/vscode/build
+
+      - name: Upload .vsix artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.platform }}-${{ matrix.arch }}-vsix
+          path: "extensions/vscode/*.vsix"
