--- a/.github/workflows/pr_checks.yaml
+++ b/.github/workflows/pr_checks.yaml
@@ -11,14 +11,11 @@ on:
       - main
 
 jobs:
-  install-root:
+
+  prettier-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
+      - uses: ./.github/actions/setup-node-base
 
       - uses: actions/cache@v4
         id: root-cache
@@ -30,116 +27,43 @@ jobs:
         if: steps.root-cache.outputs.cache-hit != 'true'
         run: npm ci
 
-  prettier-check:
-    needs: install-root
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
       - name: Check code formatting with Prettier
         run: npx prettier --check "**/*.{js,jsx,ts,tsx,json,css,md}" --ignore-path .gitignore --ignore-path .prettierignore
 
   build-packages:
-    needs: install-root
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      - name: Build packages (Unix)
-        run: node ./scripts/build-packages.js
+      - uses: ./.github/actions/setup-node-base
+      - uses: ./.github/actions/setup-packages
 
   config-yaml-checks:
-    needs: build-packages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
+      - uses: ./.github/actions/setup-node-base
+      - uses: ./.github/actions/setup-packages
 
       - uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
 
-      - name: Build packages and check config-yaml
+      - name: Check config-yaml
         run: |
-          node ./scripts/build-packages.js
           cd packages/config-yaml
           npx tsc --noEmit
           # Tests are currently failing, commenting out for now
           # npm test
 
-  install-core:
-    needs: install-root
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
-        id: root-cache
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - uses: actions/cache@v4
-        id: core-cache
-        with:
-          path: core/node_modules
-          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
-
-      - name: Install core dependencies
-        if: steps.core-cache.outputs.cache-hit != 'true'
-        run: |
-          cd core
-          npm ci
 
   core-checks:
-    needs: install-core
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - uses: ./.github/actions/setup-node-base
+      - uses: ./.github/actions/setup-packages
+      - uses: ./.github/actions/setup-component
         with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - uses: actions/cache@v4
-        with:
-          path: core/node_modules
-          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
-
-      - name: Build packages and install core dependencies
-        run: |
-          node ./scripts/build-packages.js
-          cd core
-          npm ci
+          component: core
+          include-root: true
 
       - name: Type check and lint
         run: |
@@ -149,73 +73,20 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-  install-gui:
-    needs: [install-root, install-core]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - uses: actions/cache@v4
-        with:
-          path: core/node_modules
-          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
-
-      - uses: actions/cache@v4
-        id: gui-cache
-        with:
-          path: gui/node_modules
-          key: ${{ runner.os }}-gui-node-modules-${{ hashFiles('gui/package-lock.json') }}
-
-      - name: Build packages and install dependencies
-        run: |
-          node ./scripts/build-packages.js
-          if [ "${{ steps.gui-cache.outputs.cache-hit }}" != "true" ]; then
-            cd core
-            npm ci
-            cd ../gui
-            npm ci
-          fi
 
   gui-checks:
-    needs: install-gui
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: ./.github/actions/setup-node-base
+      - uses: ./.github/actions/setup-packages
+      - uses: ./.github/actions/setup-component
         with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
+          component: core
+          include-root: true
+      - uses: ./.github/actions/setup-component
         with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - uses: actions/cache@v4
-        with:
-          path: core/node_modules
-          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
-
-      - uses: actions/cache@v4
-        with:
-          path: gui/node_modules
-          key: ${{ runner.os }}-gui-node-modules-${{ hashFiles('gui/package-lock.json') }}
-
-      - name: Build packages and install dependencies
-        run: |
-          node ./scripts/build-packages.js
-          cd core
-          npm ci
-          cd ../gui
-          npm ci
+          component: gui
+          include-packages: false
 
       - name: Type check and lint
         run: |
@@ -224,89 +95,26 @@ jobs:
           npm run lint
 
   binary-checks:
-    needs: [install-root, install-core]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - uses: ./.github/actions/setup-node-base
+      - uses: ./.github/actions/setup-packages
+      - uses: ./.github/actions/setup-component
         with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
+          component: core
+          include-root: true
+      - uses: ./.github/actions/setup-component
         with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - uses: actions/cache@v4
-        with:
-          path: core/node_modules
-          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
-
-      - uses: actions/cache@v4
-        id: binary-cache
-        with:
-          path: binary/node_modules
-          key: ${{ runner.os }}-binary-node-modules-${{ hashFiles('binary/package-lock.json') }}
-
-      - name: Build packages and install dependencies
-        run: |
-          node ./scripts/build-packages.js
-          if [ "${{ steps.binary-cache.outputs.cache-hit }}" != "true" ]; then
-            cd core
-            npm ci
-            cd ../binary
-            npm ci
-          fi
+          component: binary
+          include-packages: false
 
       - name: Type check
         run: |
           cd binary
           npx tsc --noEmit
 
-  install-vscode:
-    needs: [install-root, install-core]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - uses: actions/cache@v4
-        with:
-          path: core/node_modules
-          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
-
-      - uses: actions/cache@v4
-        id: vscode-cache
-        with:
-          path: extensions/vscode/node_modules
-          key: ${{ runner.os }}-vscode-node-modules-${{ hashFiles('extensions/vscode/package-lock.json') }}
-
-      - name: Build packages and install dependencies
-        run: |
-          node ./scripts/build-packages.js
-          if [ "${{ steps.vscode-cache.outputs.cache-hit }}" != "true" ]; then
-            cd core
-            npm ci
-            cd ../extensions/vscode
-            npm ci
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
 
   vscode-checks:
-    needs: install-vscode
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -354,25 +162,13 @@ jobs:
           npm run vitest
 
   core-tests:
-    needs: install-core
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - uses: ./.github/actions/setup-node-base
+      - uses: ./.github/actions/setup-packages
+      - uses: ./.github/actions/setup-component
         with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
-        with:
-          path: core/node_modules
-          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
-
-      - name: Build packages and install core dependencies
-        run: |
-          node ./scripts/build-packages.js
-          cd core
-          npm ci
+          component: core
 
       - name: Run core tests
         run: |
@@ -390,39 +186,20 @@ jobs:
           AZURE_FOUNDRY_MISTRAL_SMALL_API_KEY: ${{ secrets.AZURE_FOUNDRY_MISTRAL_SMALL_API_KEY }}
           AZURE_OPENAI_GPT41_API_KEY: ${{ secrets.AZURE_OPENAI_GPT41_API_KEY }}
 
-  package-tests:
-    runs-on: ubuntu-latest
+  test-packages:
+    needs: build-packages
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        package: [hub, config-yaml, fetch, openai-adapters]
     steps:
-      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-node-base
+      - uses: ./.github/actions/setup-packages
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      - name: Build packages and run tests
+      - name: Test ${{ matrix.package }}
         run: |
-          node ./scripts/build-packages.js
-          cd packages/config-yaml
-          npm test
-
-  openai-adapters-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      - uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-root-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - name: Build packages and run tests
-        run: |
-          node ./scripts/build-packages.js
-          cd packages/openai-adapters
+          cd packages/${{ matrix.package }}
           npm test
         env:
           IGNORE_API_KEY_TESTS: ${{ github.event.pull_request.head.repo.fork == true || github.actor == 'dependabot[bot]' }}
@@ -438,14 +215,33 @@ jobs:
 
   vscode-get-test-file-matrix:
     runs-on: ubuntu-latest
-    needs: [install-root, install-vscode]
     outputs:
       test_file_matrix: ${{ steps.vscode-get-test-file-matrix.outputs.test_file_matrix }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Cache node modules
+      - name: Cache npm
         uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-matrix-${{ hashFiles('core/package-lock.json', 'extensions/vscode/package-lock.json') }}
+
+      - name: Cache packages node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            packages/*/node_modules
+          key: ${{ runner.os }}-packages-node-modules-${{ hashFiles('packages/*/package-lock.json') }}
+
+      - name: Cache core node modules
+        uses: actions/cache@v4
+        with:
+          path: core/node_modules
+          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
+
+      - name: Cache vscode extension node modules
+        uses: actions/cache@v4
+        id: vscode-cache
         with:
           path: extensions/vscode/node_modules
           key: ${{ runner.os }}-vscode-node-modules-${{ hashFiles('extensions/vscode/package-lock.json') }}
@@ -454,10 +250,13 @@ jobs:
         id: vscode-get-test-file-matrix
         run: |
           node ./scripts/build-packages.js
-          cd core
-          npm ci
-          cd ../extensions/vscode
-          npm ci
+          if [ "${{ steps.vscode-cache.outputs.cache-hit }}" != "true" ]; then
+            cd core
+            npm ci
+            cd ../extensions/vscode
+            npm ci
+          fi
+          cd extensions/vscode
           npm run e2e:compile
           if [[ "${{ github.event.pull_request.head.repo.fork }}" == "true" || "${{ github.actor }}" == "dependabot[bot]" ]]; then
             # Exclude SSH tests for forks
@@ -478,32 +277,51 @@ jobs:
           echo "Test files: ${{ steps.vscode-get-test-file-matrix.outputs.test_file_matrix }}"
 
   vscode-package-extension:
-    needs: [install-vscode, install-core]
-    uses: ./.github/workflows/build-vscode-extension.yml
-    with:
-      # Limited platforms for faster PR checks
-      platforms: |
-        [
-          {
-            "os": "ubuntu-latest",
-            "platform": "linux",
-            "arch": "x64",
-            "npm_config_arch": "x64"
-          },
-          {
-            "os": "macos-13",
-            "platform": "darwin",
-            "arch": "x64",
-            "npm_config_arch": "x64"
-          }
-        ]
-      pre-release: false
-      commit-sha: ${{ github.sha }}
-    secrets: inherit
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            platform: linux
+            arch: x64
+            npm_config_arch: x64
+          - os: macos-13
+            platform: darwin
+            arch: x64
+            npm_config_arch: x64
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+
+      - uses: ./.github/actions/build-vscode-extension
+        with:
+          platform: ${{ matrix.platform }}
+          arch: ${{ matrix.arch }}
+          npm_config_arch: ${{ matrix.npm_config_arch }}
+          pre-release: false
+          commit-sha: ${{ github.sha }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vscode-extension-build-${{ runner.os }}
+          path: extensions/vscode/build
+
+      - name: Upload .vsix artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.platform }}-${{ matrix.arch }}-vsix
+          path: "extensions/vscode/*.vsix"
 
   vscode-download-e2e-dependencies:
     runs-on: ubuntu-latest
-    needs: [install-vscode, install-core]
     steps:
       - uses: actions/checkout@v4
 
@@ -546,8 +364,6 @@ jobs:
         vscode-download-e2e-dependencies,
         vscode-get-test-file-matrix,
         vscode-package-extension,
-        install-vscode,
-        install-core,
       ]
     runs-on: ubuntu-latest
     # Tests requiring secrets need approval from maintainers
@@ -657,7 +473,6 @@ jobs:
           path: extensions/vscode/e2e.log
 
   gui-tests:
-    needs: [install-gui, install-core]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -692,7 +507,7 @@ jobs:
           npm test
 
   jetbrains-tests:
-    needs: [install-root, core-checks]
+    needs: [core-checks]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -727,16 +542,37 @@ jobs:
           node-version-file: ".nvmrc"
 
       - uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-jetbrains-${{ hashFiles('extensions/vscode/package-lock.json') }}
+
+      - uses: actions/cache@v4
+        id: vscode-extension-cache
+        with:
+          path: extensions/vscode/node_modules
+          key: ${{ runner.os }}-vscode-node-modules-${{ hashFiles('extensions/vscode/package-lock.json') }}
+
+      - uses: actions/cache@v4
         id: gui-cache
         with:
           path: gui/node_modules
           key: ${{ runner.os }}-gui-node-modules-${{ hashFiles('gui/package-lock.json') }}
 
-      # We can shave off another minute off our CI script by finding a way to share this with vscode-tests
+      # Cache prepackaged extension build to share with other jobs
+      - uses: actions/cache@v4
+        id: vscode-prepackage-cache
+        with:
+          path: extensions/vscode/build
+          key: ${{ runner.os }}-vscode-prepackage-${{ hashFiles('extensions/vscode/package-lock.json', 'extensions/vscode/**/*.ts', 'extensions/vscode/**/*.json') }}
+
+      # Only run prepackage if not cached - saves ~1 minute
       - name: Run prepackage script
+        if: steps.vscode-prepackage-cache.outputs.cache-hit != 'true'
         run: |
           cd extensions/vscode
-          npm ci
+          if [ "${{ steps.vscode-extension-cache.outputs.cache-hit }}" != "true" ]; then
+            npm ci
+          fi
           npm run prepackage
         env:
           # https://github.com/microsoft/vscode-ripgrep/issues/9#issuecomment-643965333
@@ -802,17 +638,13 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     needs:
-      - install-root
       - prettier-check
-      - install-core
       - core-checks
-      - install-gui
       - gui-checks
       - binary-checks
-      - install-vscode
       - vscode-checks
       - core-tests
-      - package-tests
+      - test-packages
       - vscode-get-test-file-matrix
       - vscode-package-extension
       - vscode-download-e2e-dependencies
@@ -821,7 +653,6 @@ jobs:
       - jetbrains-tests
       - config-yaml-checks
       - build-packages
-      - openai-adapters-tests
 
     steps:
       - name: Decide whether the needed jobs succeeded or failed
