--- a/.github/workflows/pr_checks.yaml
+++ b/.github/workflows/pr_checks.yaml
@@ -32,17 +32,6 @@ jobs:
       - name: Check code formatting with Prettier
         run: npx prettier --check "**/*.{js,jsx,ts,tsx,json,css,md}" --ignore-path .gitignore --ignore-path .prettierignore
 
-  build-packages:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-      - name: Setup packages
-        uses: ./.github/actions/setup-packages
-
-
   core-checks:
     runs-on: ubuntu-latest
     steps:
@@ -174,13 +163,20 @@ jobs:
           cd extensions/vscode
           npm run vitest
 
-
   packages-checks:
-    needs: build-packages
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: [hub, config-yaml, fetch]
+        package:
+          [
+            hub,
+            config-yaml,
+            fetch,
+            config-types,
+            continue-sdk,
+            llm-info,
+            openai-adapters,
+          ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -303,7 +299,7 @@ jobs:
           path: "extensions/vscode/*.vsix"
 
   vscode-package-extension-macos:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
         with:
@@ -336,14 +332,9 @@ jobs:
           name: darwin-x64-vsix
           path: "extensions/vscode/*.vsix"
 
-
   vscode-e2e-tests:
     name: ${{ matrix.test_file || 'unknown' }} (${{ matrix.command }})
-    needs:
-      [
-        vscode-get-test-file-matrix,
-        vscode-package-extension-linux,
-      ]
+    needs: [vscode-get-test-file-matrix, vscode-package-extension-linux]
     runs-on: ubuntu-latest
     # Tests requiring secrets need approval from maintainers
     strategy:
@@ -361,7 +352,6 @@ jobs:
           ssh_key: ${{ secrets.GH_ACTIONS_SSH_TEST_KEY_PEM }}
           ssh_host: ${{ secrets.GH_ACTIONS_SSH_TEST_DNS_NAME }}
           is_fork: ${{ github.event.pull_request.head.repo.fork == true || github.actor == 'dependabot[bot]' }}
-
 
   jetbrains-tests:
     needs: [core-checks]
@@ -506,7 +496,6 @@ jobs:
       - vscode-package-extension-macos
       - vscode-e2e-tests
       - jetbrains-tests
-      - build-packages
 
     steps:
       - name: Decide whether the needed jobs succeeded or failed
