--- a/packages/continue-sdk/package.json
+++ b/packages/continue-sdk/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "echo 'No build step needed'",
+    "test": "echo 'No tests to run'",
     "generate-client:typescript": "openapi-generator-cli generate -i ./openapi.yaml -g typescript-fetch -o ./typescript/api -c ./openapi-generator-config.json",
     "generate-client:python": "openapi-generator-cli generate -i ./openapi.yaml -g python -o ./python/api -c ./openapi-generator-config.json",
     "generate-client:ALL": "npm run generate-client:typescript && npm run generate-client:python",
