--- a/.github/workflows/pr_checks.yaml
+++ b/.github/workflows/pr_checks.yaml
@@ -172,7 +172,7 @@ jobs:
       - name: Get package list
         id: get-packages
         run: |
-          packages=$(ls -1 packages/ | jq -R . | jq -s .)
+          packages=$(find packages/ -maxdepth 1 -type d -not -path packages/ -exec basename {} \; | jq -R . | jq -s .)
           echo "packages=$packages" >> $GITHUB_OUTPUT
           echo "Found packages: $packages"
 
