chore: run build-packages script on parellel

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -104,13 +104,8 @@ jobs:
           path: gui/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('gui/package-lock.json') }}
 
-      - name: Build packages (Windows)
-        run: ./scripts/build-packages.ps1
-        if: matrix.os == 'windows-latest'
-
-      - name: Build packages (Unix)
-        run: ./scripts/build-packages.sh
-        if: matrix.os != 'windows-latest'
+      - name: Build packages
+        run: node ./scripts/build-packages.js
 
       - name: Install extension Dependencies
         run: |
