--- a/.github/workflows/jetbrains-release.yaml
+++ b/.github/workflows/jetbrains-release.yaml
@@ -166,8 +166,8 @@ jobs:
           path: gui/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('gui/package-lock.json') }}
 
-      - name: Build packages (Unix)
-        run: cd ../.. && ./scripts/build-packages.sh
+      - name: Build packages
+        run: cd ../.. && node ./scripts/build-packages.js
 
       # npm install core
       - name: Install core node_modules
