--- a/.github/actions/build-vscode-extension/action.yml
+++ b/.github/actions/build-vscode-extension/action.yml
@@ -32,6 +32,10 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/setup-node@v4
+      with:
+        node-version-file: ".nvmrc"
+        
     - name: Set target variable
       id: set-target
       shell: bash
