--- a/.github/actions/setup-component/action.yml
+++ b/.github/actions/setup-component/action.yml
@@ -16,6 +16,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/setup-node@v4
+      with:
+        node-version-file: ".nvmrc"
     - uses: actions/cache@v4
       with:
         path: ~/.npm
