--- a/.github/actions/setup-packages/action.yml
+++ b/.github/actions/setup-packages/action.yml
@@ -4,6 +4,9 @@ description: 'Cache and build packages with npm caching'
 runs:
   using: 'composite'
   steps:
+    - uses: actions/setup-node@v4
+      with:
+        node-version-file: ".nvmrc"
     - uses: actions/cache@v4
       with:
         path: ~/.npm
