--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -191,34 +191,107 @@ jobs:
           AZURE_OPENAI_GPT41_API_KEY: ${{ secrets.AZURE_OPENAI_GPT41_API_KEY }}
           VOYAGE_API_KEY: ${{ secrets.VOYAGE_API_KEY }}
 
-  vscode-e2e-setup:
+  vscode-get-test-file-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      test_file_matrix: ${{ steps.get-test-files.outputs.test_file_matrix }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+
+      - name: Cache npm
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-matrix-${{ hashFiles('core/package-lock.json', 'extensions/vscode/package-lock.json') }}
+
+      - name: Cache packages node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            packages/*/node_modules
+          key: ${{ runner.os }}-packages-node-modules-${{ hashFiles('packages/*/package-lock.json') }}
+
+      - name: Cache core node modules
+        uses: actions/cache@v4
+        with:
+          path: core/node_modules
+          key: ${{ runner.os }}-core-node-modules-${{ hashFiles('core/package-lock.json') }}
+
+      - name: Cache vscode extension node modules
+        uses: actions/cache@v4
+        id: vscode-cache
+        with:
+          path: extensions/vscode/node_modules
+          key: ${{ runner.os }}-vscode-node-modules-${{ hashFiles('extensions/vscode/package-lock.json') }}
+
+      - name: Build packages and get test files
+        id: get-test-files
+        run: |
+          node ./scripts/build-packages.js
+          if [ "${{ steps.vscode-cache.outputs.cache-hit }}" != "true" ]; then
+            cd core
+            npm ci
+            cd ../extensions/vscode
+            npm ci
+          fi
+          cd extensions/vscode
+          npm run e2e:compile
+          if [[ "${{ github.event.pull_request.head.repo.fork }}" == "true" || "${{ github.actor }}" == "dependabot[bot]" ]]; then
+            # Exclude SSH tests for forks
+            FILES=$(ls -1 e2e/_output/tests/*.test.js | grep -v "SSH" | jq -R . | jq -s .)
+          else
+            # Include all tests for non-forks
+            FILES=$(ls -1 e2e/_output/tests/*.test.js | jq -R . | jq -s .)
+          fi
+          echo "test_file_matrix<<EOF" >> $GITHUB_OUTPUT
+          echo "$FILES" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+        env:
+          # https://github.com/microsoft/vscode-ripgrep/issues/9#issuecomment-643965333
+          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+
+      - name: Debug Outputs
+        run: |
+          echo "Test files: ${{ steps.get-test-files.outputs.test_file_matrix }}"
+
+  vscode-package-extension-linux:
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    outputs:
-      test_file_matrix: ${{ steps.setup.outputs.test_file_matrix }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup E2E tests and build extension
-        id: setup
-        uses: ./.github/actions/setup-vscode-e2e
+      - name: Build VS Code extension
+        uses: ./.github/actions/build-vscode-extension
         with:
-          is_fork: ${{ github.event.pull_request.head.repo.fork == true || github.actor == 'dependabot[bot]' }}
+          platform: linux
+          arch: x64
+          npm_config_arch: x64
+          pre-release: false
+          commit-sha: ${{ github.sha }}
         env:
           GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
 
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vscode-extension-build-Linux
+          path: extensions/vscode/build
+
   vscode-e2e-tests:
     name: ${{ matrix.test_file || 'unknown' }} (${{ matrix.command }})
-    needs: vscode-e2e-setup
+    needs: [vscode-get-test-file-matrix, vscode-package-extension-linux]
     runs-on: ubuntu-latest
     timeout-minutes: 15
     # Tests requiring secrets need approval from maintainers
     strategy:
       fail-fast: false
       matrix:
-        test_file: ${{ fromJson(needs.vscode-e2e-setup.outputs.test_file_matrix) }}
+        test_file: ${{ fromJson(needs.vscode-get-test-file-matrix.outputs.test_file_matrix) }}
         command: ["e2e:ci:run", "e2e:ci:run-yaml"]
     steps:
       - uses: actions/checkout@v4
@@ -255,7 +328,8 @@ jobs:
       - vscode-checks
       - get-packages-matrix
       - packages-checks
-      - vscode-e2e-setup
+      - vscode-get-test-file-matrix
+      - vscode-package-extension-linux
       - vscode-e2e-tests
       - jetbrains-tests
 
