--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -194,7 +194,7 @@ jobs:
   vscode-get-test-file-matrix:
     runs-on: ubuntu-latest
     outputs:
-      test_file_matrix: ${{ steps.get-test-files.outputs.test_file_matrix }}
+      test_file_matrix: ${{ steps.vscode-get-test-file-matrix.outputs.test_file_matrix }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
