--- a/core/package.json
+++ b/core/package.json
@@ -54,6 +54,7 @@
     "@aws-sdk/credential-providers": "^3.778.0",
     "@continuedev/config-types": "^1.0.13",
     "@continuedev/config-yaml": "file:../packages/config-yaml",
+    "@continuedev/errors": "file:../packages/errors",
     "@continuedev/fetch": "file:../packages/fetch",
     "@continuedev/llm-info": "file:../packages/llm-info",
     "@continuedev/openai-adapters": "file:../packages/openai-adapters",
