--- a/gui/package.json
+++ b/gui/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@continuedev/config-yaml": "file:../packages/config-yaml",
+    "@continuedev/errors": "file:../packages/errors",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.0.18",
     "@panzoom/panzoom": "^4.6.0",
