--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "scripts": {
     "test": "npm run lint && cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "vitest": "vitest run",
+    "vitest:watch": "vitest watch",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
@@ -95,7 +97,8 @@
     "supertest": "^7.1.3",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "vitest": "^3.2.4"
   },
   "engine": {
     "node": ">=18"
