Revert "use secrets not env for gh token"
This reverts commit 4174e1e64b8f5c3376733c0ee389b8b4e0185b61.

--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -306,6 +306,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run JetBrains tests
         uses: ./.github/actions/run-jetbrains-tests
+        env:
+          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
 
   # GitHub does not have a way of requiring that all checks pass (you must manually select each job)
   # This action at least lets us manage the list of required tests via source control
