--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -178,6 +178,7 @@ jobs:
       - name: Test and check ${{ matrix.package }}
         run: |
           cd packages/${{ matrix.package }}
+          npm ci
           npm test
         env:
           IGNORE_API_KEY_TESTS: ${{ github.event.pull_request.head.repo.fork == true || github.actor == 'dependabot[bot]' }}
